chore: Fix bug with Unity player when deployed.

--- a/pages/dice-notation/1.0-dice-notation.md
+++ b/pages/dice-notation/1.0-dice-notation.md
@@ -20,7 +20,7 @@ games bring out giant sacks of dice with varying sizes and combinations.
 In this project, you will learn about [Dice Notation] and implement a dice
 notation parser, roller, and analyzer.
 
-{% include demo.html path="/demos/project1/index.html" %}
+{% include demo.html path="demos/project1/index.html" %}
 
 ## [1.1 Setup]
 
